--- a/HeatMap.Rmd
+++ b/HeatMap.Rmd
@@ -8,7 +8,7 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
-knitr::opts_knit$set(root.dir = "C:/Users/Liliana/OneDrive - Universitat de Barcelona/Projects")
+knitr::opts_knit$set(root.dir = ".../Projects")
 ```
 
 This script reports the code used to produce one plot included in the academic paper “Just Reallocated? Robots, Displacement, and Job Quality”, authored by Liliana Cuccu and Vicente Royuela (available [here]( https://www.ifo.de/sites/default/files/events/2022/pillars22-Cuccu.pdf)).
